// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FormLabel should render & hover if required 1`] = `
<DocumentFragment>
  <label
    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
    data-testid="FormLabel"
    label="Test"
    required=""
  >
    Test
    <div
      class="w-1 h-1 mt-1 ml-1 rounded-full bg-theme-danger-400"
      data-testid="FormLabel__required"
    />
  </label>
</DocumentFragment>
`;

exports[`FormLabel should render with name from context 1`] = `
<DocumentFragment>
  <label
    class="flex inline-block mb-2 text-sm font-medium FormLabel transition-colors duration-100 text-theme-neutral-dark"
    data-testid="FormLabel"
    for="test"
    label="Test Label"
  >
    Test Label
  </label>
</DocumentFragment>
`;
